src/test/resources/public/input/typechecking/fail/double_decl/fail06.jova
class Nested {

  public int fortyTwo(int x) {
    int x;
    return 42;
  }
}
